# privatevault-deploy

./: .gitignore  DEMO.md  RUN_LOCAL.md  SETUP.md  debug_matching.py  start_all.ps1  stop_all.ps1
LORK/: .env.example  .gitignore  CONTRIBUTING.md  README.md  check_config_imports.sh  fix_config_imports.sh  main.py  pyproject.toml  requirements.txt  services_config.json  setup_models.sh  vercel.json  workflow.yaml
LORK/cmd/: lork-debug-run.py  lork-fork-run.py  lork-inspect-run.py  lork-replay-run.py  lork-run-workflow.py  lork-trace-run.py
LORK/docs/: architecture.md  control-plane.md  event-sourcing.md  replay.md
LORK/examples/: demo_agent.py  demo_crewai.py  demo_langgraph.py  run_worker.py
LORK/lork/: api_server.py  cli.py  config.py  devtools.py  event_log.py  exceptions.py  models.py  schemas.py  storage.py
LORK/migrations/: 0003_run_events.sql  0003_run_events_sqlite.sql
LORK/mock_data/: transactions.json
LORK/tests/: test_api.py
LORK/workflows/: support_ticket.yaml
PrivateVault.ai/: .dockerignore  .env.example  .env.test.example  .flake8  .gitignore  CRITICAL_COMPONENTS.md  LICENSE  Makefile  README.md  SECURITY.md  SECURITY_SETUP.md  UAAL_INTEGRATION.md  agent.proto  demo_full_pipeline.py  go.mod  go.sum  main.py  package-lock.json  package.json  policy_config.json  pyproject.toml  pytest.ini  requirements-integrated.txt  requirements-monitoring.txt  requirements-security.txt  requirements-test.txt  requirements.txt  services_config.json  setup.cfg  setup.py  shadow_firewall.ts  tsconfig.json
PrivateVault.ai/benchmarks/: ledger_adapter_benchmarks.md  ledger_benchmarks.md
PrivateVault.ai/cli/: __init__.py  client.py  config.py  demo.py  output.py  pv.py
PrivateVault.ai/contracts/: AuditChain.sol
PrivateVault.ai/coordination/: __init__.py
PrivateVault.ai/demos/: demo_all_in_one.py  demo_loan.py  federal_procurement_demo.py  fintech_final_boss_ultimate.py  galani_ecomm_demo.py  galani_fintech_demo.py  galani_medtech_demo.py  galani_protocol_v2.py  galani_protocol_v3_enterprise.py  galani_universal_demo.py  interactive_web_demo.py  ma_clause_demo.py  ofac_live_call_demo.py  prescription_demo.py  prescription_demo_controlled.py  proof_not_promises_demo.py  real_data_demo.py  replay_demo.py  sovereign_demo_flow.py  uaal_demo_gate.py  unstructured_chaos_demo.py  unstructured_intent_demo.py  web_demo.py
PrivateVault.ai/docs/: ARCHITECTURE.md  FAILURE_MODES.md  PRIVATEVAULT_OVERVIEW.md  README_ENTERPRISE.txt  VERIFY2_REPORT.md  ci.md  cli.md  cto_brutal_tests_status.md  demo-onboarding.md  platform-architecture.md  quorum-v2.md  sdk-node.md  sdk-python.md
PrivateVault.ai/scripts/: build-authority-resolver.sh  compile-wasm.sh  cto_brutal_tests.sh  debug.sh  demo.sh  demo_bootstrap.py  demo_reset.sh  deploy-governance-relay.sh  deploy-hardened.sh  deploy-v2-relay.sh  export_compliance.sh  export_openapi.py  fix-opa-policy.sh  fix_vault_kv.sh  generate-license.sh  install_security.sh  master-demo-v2.sh  master-demo-v3.sh  master-demo-v4.sh  master-demo.sh  migrate_api_keys.py  (+36 more)
botbook.dev/: .env.example  .gitignore  Dockerfile  README.md  demo.py  fintech_pipeline.yaml  main.py  orchestrator.py  pyproject.toml  requirements.txt  run.sh  sales_pipeline.yaml
(+722 files in other folders)
