[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lork"
version = "0.1.0"
description = "LORk AI runtime — Event-sourced control plane"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "httpx"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lork*"]

[project.scripts]
lork = "lork.cli:main"
