[project]
name = "privatevault"
version = "1.0.0"
description = "Governance Server — Policy enforcement, shadow verification, audit ledger"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "hvac",
    "PyJWT",
    "structlog",
    "prometheus-client",
    "requests",
    "pydantic",
    "python-multipart",
    "cryptography",
    "bcrypt",
    "python-dotenv",
    "aiofiles",
    "python-json-logger"
]

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

# Keep lint strict for real code, but ignore demos/experiments.
exclude = [
  ".git",
  ".venv",
  ".venv-tests",
  "venv",
  "node_modules",
  "dist",
  "build",
  "__pycache__",
  "*.bundle",

  # demos / scratch
  "unstructured_chaos_demo.py",
  "unstructured_intent_demo.py",
  "usage_tracker.py",
  "examples/",
  "demos/",
  "ai-firewall-demo/",
]

[tool.ruff.lint]
# Keep core quality checks, avoid over-policing formatting if you're not ready
select = ["E", "F", "I", "UP"]
